<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DSpot</string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="login">Login</string>
    <string name="guest">Guest</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
	<string name="email">Email</string>
        
</resources>