<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/ScrollView1"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:orientation="vertical"
  android:background="@drawable/wallpapper">


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="70dp"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_launcher" android:layout_marginTop="20dp"/>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:stretchColumns="1" android:layout_marginTop="20dp">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/username"
                android:textColor="@android:color/white"/>

            <EditText
                android:id="@+id/login_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text" >

                <requestFocus />

                <requestFocus />

            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/password"
                android:textColor="@android:color/white"
                />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword" >
            </EditText>

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/login_loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/green_button"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="#FFFFFFFF"
        android:textSize="16dp" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_loginButton"
        android:layout_centerHorizontal="true"
        android:stretchColumns="0,1" android:layout_marginTop="10dp">

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/login_registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register" 
                android:background="@drawable/blue_button" 
                android:layout_marginRight="5dp"
                android:textStyle="bold"
        		android:textColor="#FFFFFFFF"
        		android:textSize="16dp" />

            <Button
                android:id="@+id/login_guestButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guest"
                android:background="@drawable/gray_button"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
        		android:textColor="#FFFFFFFF"
        		android:textSize="16dp" />

        </TableRow>
    </TableLayout>

</RelativeLayout>

</ScrollView>